# FILTRA

./: .gitignore  AGENTS.md  README.md  brief.md  pyproject.toml  requirements.in  requirements.txt  ruff.toml  tmp.txt
.bmad-core/: install-manifest.yaml
.bmad-core/tasks/: qa-gate.md
.bmad-core/templates/: qa-gate-tmpl.yaml
config/: alias_map.yaml
docs/: architecture.md  prd.md
docs/architecture/: checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/brief/: 1-executive-summary.md  2-problem-statement.md  3-proposed-solution.md  4-target-users.md  5-goals-success-metrics.md  6-mvp-minimum-viable-product-scope.md  index.md
docs/prd/: epic-1-foundation-warm-up.md  epic-2-core-extraction.md  epic-3-llm-scoring.md  epic-4-reliability-ux.md  epic-5-validation-samples.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  technical-assumptions.md  user-interface-design-goals-cli-ux.md
docs/qa/: windows-11-runbook.md
docs/stories/: 1.1.cli-project-scaffold.md  1.2.health-checks-and-exit-codes.md  1.3.warm-up-command.md  1.4.windows-11-readiness.md  (+7 more)
filtra/: __init__.py  __main__.py  cli.py  errors.py  exit_codes.py
scripts/: warmup_demo.ps1
tests/: test_cli.py  test_io.py  test_ner_pipeline.py  test_normalization.py  test_pdf_loader.py  test_warmup.py
(+45 files in other folders)
